added degradation of file

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Remi Butler",
   "license": "GPL-3.0",
   "dependencies": {
-    "@remibutler/easyrandom": "^1.1.0"
+    "@remibutler/easyrandom": "^1.1.0",
+    "jpeg-js": "^0.3.6"
   }
 }
